// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invoices create a group 1`] = `
Object {
  "companyCustomerId": "offlineContext_cognitoIdentityId",
  "currentId": 100,
  "id": Any<String>,
  "name": "testGroup",
}
`;

exports[`Invoices create a recipient 1`] = `
Object {
  "address": "Road 234A",
  "city": "RecipientCity",
  "companyCustomerId": "offlineContext_cognitoIdentityId",
  "createdAt": 2345678901,
  "email": "fiddep@telia.com",
  "firstName": "RecipientFirst",
  "id": Any<String>,
  "lastName": "RecipientLast",
  "mobile": "+46762345678",
  "ssn": "1234567890",
  "zipcode": "12345",
}
`;

exports[`Invoices invoice can be locked on a specific group 1`] = `
Object {
  "companyCustomerId": "offlineContext_cognitoIdentityId",
  "createdAt": Any<Number>,
  "id": Any<String>,
  "invoiceRows": Array [
    Object {
      "description": "3an A",
      "price": 345,
      "tax": 0.25,
      "unit": 34,
    },
    Object {
      "description": "3an B",
      "price": 345,
      "tax": 0.25,
      "unit": 34,
    },
    Object {
      "description": "3an C",
      "price": 345,
      "tax": 0.25,
      "unit": 34,
    },
  ],
  "itemStatus": Array [
    Any<Object>,
  ],
  "locked": true,
  "recipientIds": Array [
    Any<String>,
  ],
  "sequentialId": 101,
}
`;

exports[`Invoices invoices have correct attributes after creation 1`] = `
Object {
  "companyCustomerId": "offlineContext_cognitoIdentityId",
  "createdAt": Any<Number>,
  "id": Any<String>,
  "invoiceRows": Array [
    Object {
      "description": "3an A",
      "price": 345,
      "tax": 0.25,
      "unit": 34,
    },
    Object {
      "description": "3an B",
      "price": 345,
      "tax": 0.25,
      "unit": 34,
    },
    Object {
      "description": "3an C",
      "price": 345,
      "tax": 0.25,
      "unit": 34,
    },
  ],
  "itemStatus": Array [],
  "locked": false,
  "recipientIds": Array [
    Any<String>,
  ],
}
`;
